; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_test_repo_init__can_reinit_an_initialized_repository.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_init.c_test_repo_init__can_reinit_an_initialized_repository.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cleanup_repository = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"extended\00", align 1
@_repo = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_repo_init__can_reinit_an_initialized_repository() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 @cl_set_cleanup(i32* @cleanup_repository, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %3 = call i32 @git_futils_mkdir(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 509, i32 0)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = call i32 @git_repository_init(i32** @_repo, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 0)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = call i32 @git_repository_init(i32** %1, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 0)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** @_repo, align 8
  %10 = call i32 @git_repository_path(i32* %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @git_repository_path(i32* %11)
  %13 = call i32 @cl_assert_equal_s(i32 %10, i32 %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @git_repository_free(i32* %14)
  ret void
}

declare dso_local i32 @cl_set_cleanup(i32*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_futils_mkdir(i8*, i32, i32) #1

declare dso_local i32 @git_repository_init(i32**, i8*, i32) #1

declare dso_local i32 @cl_assert_equal_s(i32, i32) #1

declare dso_local i32 @git_repository_path(i32*) #1

declare dso_local i32 @git_repository_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
